fixed overflow on major post container body

--- a/src/component/MajorProject.css
+++ b/src/component/MajorProject.css
@@ -97,4 +97,5 @@ border-bottom-right-radius: 4px;
 
 .mp-body-text {
   width: 95%;
+  overflow: auto;
 }
